--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent">
 
     <ScrollView
+        android:id="@+id/sv_weather_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -14,4 +15,21 @@
             android:padding="16dp"
             android:textSize="20sp" />
     </ScrollView>
+
+    <TextView
+        android:textAppearance="?android:textAppearanceMedium"
+        android:id="@+id/tv_error_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/error_loading_weather"
+        android:visibility="invisible" />
+
+    <ProgressBar
+        android:id="@+id/pb_weather_loading"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="invisible" />
+
 </FrameLayout>
