--- a/app/src/main/res/layout/activity_forecast.xml
+++ b/app/src/main/res/layout/activity_forecast.xml
@@ -3,26 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ScrollView
-        android:id="@+id/sv_weather_container"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_forecast"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_weather_data"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:textSize="20sp" />
-    </ScrollView>
+        android:layout_height="match_parent" />
 
     <TextView
-        android:textAppearance="?android:textAppearanceMedium"
         android:id="@+id/tv_error_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/error_loading_weather"
+        android:textAppearance="?android:textAppearanceMedium"
         android:visibility="invisible" />
 
     <ProgressBar
