--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -3,8 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/refresh_action"
-        android:icon="@drawable/ic_refresh"
-        android:title="@string/refresh"
+        android:id="@+id/share_action"
+        android:icon="@drawable/ic_share"
+        android:title="@string/share_weather"
         app:showAsAction="always" />
+
 </menu>
