--- a/app/src/main/res/menu/detail_menu.xml
+++ b/app/src/main/res/menu/detail_menu.xml
@@ -5,7 +5,13 @@
     <item
         android:id="@+id/share_action"
         android:icon="@drawable/ic_share"
-        android:title="@string/share_weather"
+        android:title="@string/share_menu_item"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/settings_action"
+        android:icon="@drawable/ic_settings"
+        android:title="@string/settings_menu_item"
+        app:showAsAction="never" />
 
 </menu>
