--- a/app/src/main/res/xml/preference_sunshine.xml
+++ b/app/src/main/res/xml/preference_sunshine.xml
@@ -3,10 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <ListPreference
-        android:defaultValue="@string/pref_unit_celsius_value"
+        android:dialogIcon="@drawable/ic_termometer"
+        android:defaultValue="@string/pref_units_default"
         android:entryValues="@array/pref_units_values"
+        android:icon="@drawable/ic_termometer"
         android:key="@string/pref_units_key"
-        android:title="Select Temperature Units"
+        android:title="Temperature units"
         app:entries="@array/pref_units_labels" />
 
 </PreferenceScreen>
